# PACER

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  _git_ship_tm_yield.bat  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/runbooks/: flip_aftermarket_listings.md
examples/: usage_examples.py
legal/: partner_profit_share_agreement.md
migrations/: README  env.py
migrations/versions/: 0001_initial.py  0002_add_domain_portfolio.py  2026_04_16_0001_initial_schema.py  2026_04_16_0003_partner_and_yield_fields.py  2026_04_17_0004_payout_ledger.py
src/: config.py  main.py
src/alerts/: slack_alert.py
src/compliance/: compliance_logger.py
src/dropcatch/: dropcatch_client.py
src/enrichment/: domain_enricher.py
src/models/: domain.py
src/monetization/: monetization_router.py  redirect_manager.py
src/pacer/: __init__.py  config.py  db.py  main.py  pacer_client.py
src/pacer/alerts/: __init__.py  slack.py
src/pacer/api/: __init__.py  app.py  auth.py
src/pacer/automation/: __init__.py  executor.py  task.py
src/pacer/cli/: __init__.py  monetization.py  partners.py  revenue.py
src/pacer/compliance/: __init__.py  audit.py
src/pacer/dropcatch/: __init__.py  dropcatch_com.py  dynadot.py  godaddy.py  namejet.py  orchestrator.py
src/pacer/enrichment/: __init__.py  company_resolver.py
src/pacer/logging/: __init__.py  audit.py
src/pacer/models/: __init__.py  base.py  compliance_log.py  domain_candidate.py  domain_portfolio.py
src/pacer/monetization/: __init__.py  afternic.py  cloudflare.py  outreach.py  parking.py  redirect_engine.py  router.py
src/pacer/monitoring/: __init__.py  health.py  metrics.py
src/pacer/pacer/: __init__.py  pacer_client.py
src/pacer/partners/: __init__.py  ledger.py  payout.py
src/pacer/partners/models/: __init__.py  partner.py
src/pacer/pipelines/: __init__.py  _common.py  edgar.py  pacer_recap.py  probate.py  sos_dissolutions.py  ucc_liens.py  uspto.py
src/pacer/portfolio/: portfolio_manager.py
src/pacer/reliability/: __init__.py  circuit_breaker.py  retry.py
src/pacer/rwa/: __init__.py  doma_client.py  securitize_router.py
src/pacer/scoring/: __init__.py  ahrefs.py  engine.py  llm_client.py  relevance.py  spam_filter.py  trademark.py
src/pacer/ui/: __init__.py  dashboard.py
src/pacer/utils/: api_resilience.py
src/pacer/validation/: __init__.py  validator.py
src/pacer/whois/: __init__.py  whois_client.py
src/portfolio/: portfolio_manager.py
src/rwa/: doma_client.py  securitize_client.py
src/scoring/: seo_scorer.py
src/utils/: api_resilience.py
src/whois/: whois_client.py
tests/: conftest.py  test_api_resilience.py  test_api_signals.py  test_automation.py  test_cli_monetization.py  test_cli_partners_payout.py  test_cli_revenue.py  test_engine_trademark.py  test_logging.py  test_models.py  test_monetization_afternic.py  test_monetization_cloudflare.py  test_monetization_router.py  test_monitoring.py  test_pacer_client.py  test_partner_payout.py  test_payout_ledger.py  test_pipelines.py  test_portfolio.py  test_redirect_manager.py  test_reliability.py  test_resilience.py  test_router_yield_tiers.py  test_scoring.py  test_trademark_screener.py  test_ui_dashboard.py  test_validation.py  test_whois_and_monetization.py
workflows/n8n/: README.md  monthly_partner_payouts.json
