[tool.poetry]
name = "pacer"
version = "1.2.0"
description = "PACER — Automated domain arbitrage & RWA platform for 1COMMERCE LLC"
authors = ["Keith <you@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
alembic = "^1.14"
pydantic = "^2.10"
pydantic-settings = "^2.7"
httpx = "^0.28"
python-dotenv = "^1.0"
loguru = "^0.7"
apscheduler = "^3.11"
asyncpg = "^0.30"
psycopg2-binary = "^2.9"
openai = "^1.61"
tenacity = "^9.0"
circuitbreaker = "^2.0"
beautifulsoup4 = "^4.12"
python-whois = "^0.9"
aiofiles = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25"
pytest-mock = "^3.14"
black = "^24.0"
ruff = "^0.9"
mypy = "^1.0"

[tool.poetry.scripts]
pacer-run = "src.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
