[tool.poetry]
name = "pacer"
version = "0.1.0"
description = "PACER — Distressed-domain discovery, drop-catch, RWA tokenization & monetization pipeline for 1COMMERCE LLC"
authors = ["Keith J. Skaggs Jr. <skdev@1commercesolutions.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "pacer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
tenacity = "^8.5.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
apscheduler = "^3.10.4"
loguru = "^0.7.2"
openai = "^1.40.0"
anthropic = "^0.96.0"
rich = "^13.9"
python-whois = "^0.9.4"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
tldextract = "^5.1.2"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
prometheus-client = "^0.20.0"
slack-sdk = "^3.31.0"
cryptography = "^46.0.7"
web3 = "^7.0.0"
eth-account = "^0.13.0"
requests = "^2.33.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
ruff = "^0.5.5"
black = "^24.8.0"
mypy = "^1.11.0"
respx = "^0.21.1"
aiosqlite = "^0.20.0"

[tool.poetry.scripts]
pacer = "pacer.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=pacer --cov-report=term-missing"
